kubedefs/mcdep.yaml
apiVersion: app/v1
kind: Deployment
metadata:
  name: vpromc
  labels:
    app: vpromc
  spec:
  selector:
    matchLabels:
      app: vpromc
    replicas: 1
    template:
      metadata:
        labels:
          app: vpromc
      spec:
        containers:
        - name: vpromc
          image: memcached
          ports:
          - name: vpromc-port
            containerPort: 11211
