kubedefs/rmqdeploy.yaml
apiVersion: app/v1
kind: Deployment
metadata:
  name: vpromq
  labels:
    app: vpromq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vprormq
  template:
    metadata:
      labels:
        app: vpromq
    spec:
      containers:
      - name: vpromq
        image: rabbitmq
        ports:
        - name: vprormq-port
          containerPort: 3306
