kubedefs/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: vprofile.ms-sat.xyz
    http:
      paths: /
      pathType: Prefix
      backend:
        service:
          name: vproapp-service
          port:
            number: 8080
